package com.giapha.model;

/**
 * Giới tính của một người trong gia phả.
 */
public enum Gender {
    MALE,
    FEMALE
}
